--- a/you.html
+++ b/you.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>my page - Pikko Videos</title>
   <meta name="description" content="my page">
-<meta property="og:title" content="Pikko Videos">
-<meta property="og:description" content="my page">
-<meta property="og:url" content="https://videos.bird.f5.si">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta property="og:title" content="Pikko Videos">
+  <meta property="og:description" content="my page">
+  <meta property="og:url" content="https://videos.bird.f5.si">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
 </head>
@@ -17,7 +17,11 @@
   <span id="copyMessage" style="color: green; margin-left: 10px;"></span>
 
   <h1>My page</h1>
-  <font size="7" color="purple"><p id="currentUser"></p></font>
+  <div style="display: flex; align-items: center;">
+    <img id="iconPreview" src="" alt="icon" width="60" height="60" style="margin-right: 10px;">
+    <font size="7" color="purple"><p id="currentUser"></p></font>
+  </div>
+
   <button onclick="logout()">logout</button>
   <button onclick="removeAccount()">delete this account</button>
 
@@ -28,9 +32,15 @@
   <button onclick="changeAccount()">change account</button>
   <p id="changeMsg" style="color: green;"></p>
 
+  <h2>change your icon</h2>
+  <input id="iconInput" type="file" accept=".jpg"><br>
+  <button onclick="updateIcon()">update icon</button>
+  <p id="iconMsg" style="color: green;"></p>
+
   <h2>upload a video or music</h2>
   <input id="titleInput" placeholder="title"><br>
   <input id="fileInput" type="file" accept="video/mp4,audio/mp3,audio/wav"><br>
+  <input id="thumbInput" type="file" accept=".jpg"><br>
   <textarea id="description" placeholder="description" rows="4" cols="40"></textarea><br>
   <button onclick="upload()">upload</button>
 
@@ -41,10 +51,17 @@
     let me = Storage.getUser();
     if (!me) location.href = "signin.html";
     document.getElementById("currentUser").textContent = me;
+    document.getElementById("iconPreview").src = `${SERVER}/icons/${me}.jpg`;
 
     function logout() {
       Storage.clearUser();
       location.href = "https://videos.bird.f5.si";
+    }
+
+    function copyUrl() {
+      const url = `https://videos.bird.f5.si/user?name=${me}`;
+      navigator.clipboard.writeText(url);
+      document.getElementById("copyMessage").textContent = "✔️ copied";
     }
 
     function removeAccount() {
@@ -84,15 +101,32 @@
         Storage.setUser(name);
         me = name;
         document.getElementById("currentUser").textContent = name;
+        document.getElementById("iconPreview").src = `${SERVER}/icons/${name}.jpg`;
         document.getElementById("changeMsg").textContent = "✔️ changed";
         renderVideos();
       })
       .catch(() => alert("Change failed"));
     }
 
+    function updateIcon() {
+      const file = document.getElementById("iconInput").files[0];
+      if (!file) return alert("Select a .jpg image.");
+      const form = new FormData();
+      form.append("username", me);
+      form.append("icon", file);
+      fetch(`${SERVER}/updateIcon`, { method: "POST", body: form })
+        .then(res => res.ok ? res.json() : Promise.reject())
+        .then(() => {
+          document.getElementById("iconMsg").textContent = "✔️ icon updated";
+          document.getElementById("iconPreview").src = `${SERVER}/icons/${me}.jpg?${Date.now()}`;
+        })
+        .catch(() => alert("Icon update failed"));
+    }
+
     function upload() {
       const title = document.getElementById("titleInput").value.trim();
       const file = document.getElementById("fileInput").files[0];
+      const thumb = document.getElementById("thumbInput").files[0];
       const description = document.getElementById("description").value.trim();
 
       if (!title || !file) {
@@ -100,7 +134,6 @@
         return;
       }
 
-      // ✅ ファイルサイズ上限チェック（30MB = 30 * 1024 * 1024）
       const MAX_SIZE_BYTES = 30 * 1024 * 1024;
       if (file.size > MAX_SIZE_BYTES) {
         alert("File size is too large. Please select a file 30mb or less.");
@@ -112,54 +145,14 @@
       form.append("title", title);
       form.append("description", description);
       form.append("video", file);
+      if (thumb) form.append("thumbnail", thumb);
 
-      fetch(`${SERVER}/upload`, {
-        method: "POST",
-        body: form
-      })
+      fetch(`${SERVER}/upload`, { method: "POST", body: form })
         .then(res => res.json())
         .then(() => {
           document.getElementById("titleInput").value = "";
           document.getElementById("fileInput").value = "";
-          document.getElementById("description").value = "";
-          renderVideos();
-        });
-    }
-
-    function renderVideos() {
-      fetch(`${SERVER}/videos/user/${me}`)
-        .then(res => res.json())
-        .then(videos => {
-          const list = videos.map(v => `
-            <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
-              <b>${v.title}</b><br>
-              <a href="watch?id=${v.id}">watch</a>
-              <button onclick="deleteVideo('${v.id}')">delete</button>
-              <button onclick="showEdit('${v.id}', \`${v.title}\`, \`${v.description || ""}\`)">edit</button>
-              <div id="edit-${v.id}"></div>
-            </div>
-          `).join("");
-          document.getElementById("list").innerHTML = list || "the videos and the musics is not there";
-        });
-    }
-
-    function deleteVideo(id) {
-      if (!confirm("Do you delete this video or music?")) return;
-      fetch(`${SERVER}/deleteVideo/${id}`, { method: "DELETE" })
-        .then(() => renderVideos());
-    }
-
-    function showEdit(id, title, description) {
-      const container = document.getElementById(`edit-${id}`);
-      container.innerHTML = `
-        <p>Edit:</p>
-        <input id="title-${id}" value="${title}" style="width: 80%;"><br>
-        <textarea id="desc-${id}" rows="4" style="width: 80%;">${description}</textarea><br>
-        <button onclick="submitEdit('${id}')">save</button>
-        <button onclick="cancelEdit('${id}')">cancel</button>
-      `;
-    }
-
+          document.getElement
     function cancelEdit(id) {
       document.getElementById(`edit-${id}`).innerHTML = "";
     }
@@ -167,16 +160,17 @@
     function submitEdit(id) {
       const newTitle = document.getElementById(`title-${id}`).value.trim();
       const newDesc = document.getElementById(`desc-${id}`).value.trim();
+      const newThumb = document.getElementById(`thumb-${id}`).files[0];
+
+      const form = new FormData();
+      form.append("title", newTitle);
+      form.append("description", newDesc);
+      if (newThumb) form.append("thumbnail", newThumb);
+
       fetch(`${SERVER}/editVideo/${id}`, {
         method: "PATCH",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ title: newTitle, description: newDesc })
+        body: form
       }).then(() => renderVideos());
-    }
-
-    function copyUrl() {
-      const url = `https://videos.bird.f5.si/user?name=${me}`;
-      navigator.clipboard.writeText(url);
     }
 
     renderVideos();
