--- a/you.html
+++ b/you.html
@@ -35,8 +35,11 @@
   <button onclick="updateIcon()">update icon</button>
 
   <h2>upload a video or music</h2>
+  <h3>title</h3>
   <input id="titleInput" placeholder="title"><br>
+  <h3>video</h3>
   <input id="fileInput" type="file" accept="video/mp4,audio/mp3,audio/wav"><br>
+  <h3>thumbnail</h3>
   <input id="thumbInput" type="file" accept=".jpg"><br>
   <textarea id="description" placeholder="description" rows="4" cols="40"></textarea><br>
   <button onclick="upload()">upload</button>
